# artemisx-ii

./: BUILD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
artemisx-ii-complete-fix/src/app/: Activity.tsx  BumpCenter.tsx  Dashboard.tsx  Portfolio.tsx
artemisx-ii-complete-fix/src/hooks/: useNotifications.ts  useTransactionHistory.ts
artemisx-ii-complete-fix/src/lib/: notifications.ts
artemisx-ii-notifications/: package.json  vite.config.ts
artemisx-ii-notifications/src/app/: Dashboard.tsx
artemisx-ii-notifications/src/hooks/: useBumpEngine.ts  useEVMWalletData.ts  useTokenPrices.ts  useWalletData.ts
artemisx-ii-notifications/src/lib/: api.ts  notifications.ts  tauri.ts  utils.ts
artemisx-ii-notifications/src/stores/: walletStore.ts
artemisx-ii/src-tauri/: Cargo.toml  tauri.conf.json
artemisx-ii/src-tauri/src/: main.rs
artemisx-ii/src/app/: Analytics.tsx  Dashboard.tsx  Settings.tsx
artemisx-ii/src/lib/: tauri.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/capabilities/: default.json
src/app/: Activity.tsx  Analytics.tsx  BumpCenter.tsx  Dashboard.tsx  NFTGallery.tsx  Portfolio.tsx  Settings.tsx
src/components/layout/: Header.tsx  (+4 more)
src/hooks/: useAccentColor.ts  useBumpEngine.ts  useEVMBumpEngine.ts  useEVMPrices.ts  useNFTs.ts  useNotifications.ts  useTheme.ts  useTransactionHistory.ts  useWalletData.ts
src/lib/: api.ts  evm.ts  export.ts  heatmap.ts  notifications.ts  tauri.ts  theme.ts
src/stores/: bumpStore.ts  settingsStore.ts  walletStore.ts
src/types/: index.ts
(+16 files in other folders)
