[package]
name = "artemisx-ii"
version = "2.0.0"
description = "Artemis X-II Multi-Chain Bump Bot"
authors = ["Sapphire Strategies"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
